*ADD: -init code for insecur econnection over BT, starting with Android 2.3.3 (API10)

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,8 +9,27 @@
     tools:context="de.hamann.beacron.MainActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/btnHost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:onClick="onHostButton"
+        android:text="Host" />
+
+    <Button
+        android:id="@+id/btnConnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btnHost"
+        android:layout_below="@+id/btnHost"
+        android:onClick="onConnectButton"
+        android:text="Connect" />
 
 </RelativeLayout>
