--- a/res/menu/client.xml
+++ b/res/menu/client.xml
@@ -8,5 +8,6 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item android:id="@+id/menu_refresh" android:title="@string/refresh"></item>
 
 </menu>
